@@ -305,6 +305,8 @@ define('SYSMAP_GRID_SHOW_OFF',		0);
 define('SYSMAP_GRID_ALIGN_ON',		1);
 define('SYSMAP_GRID_ALIGN_OFF',		0);
 
+define('ZBX_ITEM_DELAY_DEFAULT', 30);
+
 define('ITEM_TYPE_ZABBIX',			0);
 define('ITEM_TYPE_SNMPV1',			1);
 define('ITEM_TYPE_TRAPPER',			2);
