@@ -1023,7 +1023,7 @@
 		$description = get_request('description', '');
 		$key = get_request('key', '');
 		$hostname = get_request('hostname', null);
-		$delay = get_request('delay', 30);
+		$delay = get_request('delay', ZBX_ITEM_DELAY_DEFAULT);
 		$history = get_request('history', 90);
 		$status = get_request('status', 0);
 		$type = get_request('type', 0);
@@ -1137,6 +1137,10 @@
 
 			if(!$limited || !isset($_REQUEST['form_refresh'])){
 				$delay		= $item_data['delay'];
+				if (($type == ITEM_TYPE_TRAPPER || $type == ITEM_TYPE_SNMPTRAP) && $delay == 0) {
+					$delay = ZBX_ITEM_DELAY_DEFAULT;
+				}
+
 				$history	= $item_data['history'];
 				$status		= $item_data['status'];
 				$delta		= $item_data['delta'];
@@ -1783,7 +1787,7 @@
 		$frmItem->addVar('group_itemid', $itemids);
 
 		$description = get_request('description', '');
-		$delay		= get_request('delay'		,30);
+		$delay = get_request('delay', ZBX_ITEM_DELAY_DEFAULT);
 		$history	= get_request('history'		,90);
 		$status		= get_request('status'		,0);
 		$type		= get_request('type'		,0);
